--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
     </style>
   </head>
   <body>
-    <h1> <img src="\img\menu-logo.png"></h1>
+    <h1> <img src="img/menu-logo.png"></h1>
     <div class="menu-container">
       <div class="section">
-        <h2><img src="\img\entradas-gratis.png"></h2>
+        <h2><img src="img/entradas-gratis.png"></h2>
         <div class="menu-item">
           <div class="name">Palitos de pan</div>
           <div class="price">$2.75</div>
@@ -148,7 +148,7 @@
         </div>
       </div>
       <div class="section">
-        <h2><img src="\img\hot-dog.png"></h2>
+        <h2><img src="img/hot-dog.png"></h2>
         <div class="menu-item">
           <div class="name">Pretty Hawaii</div>
           <div class="price">$7.50</div>
@@ -184,7 +184,7 @@
     <br>
     <div class="menu-container">
       <div class="section">
-        <h2><img src="\img\acompañamiento.png"></h2>
+        <h2><img src="img/acompañamiento.png"></h2>
         <div class="menu-item">
           <div class="name">Aros de Cebolla</div>
           <div class="price">$2.75</div>
@@ -197,7 +197,7 @@
         </div>
       </div>
       <div class="section">
-        <h2><img src="\img\malteadas.png"></h2>
+        <h2><img src="img/malteadas.png"></h2>
         <h3>Fresa / Chocolate</h3>
         <div class="menu-item">
           <div class="name">Pequeña</div>
@@ -219,7 +219,7 @@
     <br>
     <div class="menu-container">
       <div class="section">
-        <h2><img src="\img\sodas.png"></h2>
+        <h2><img src="img/sodas.png"></h2>
         <div class="menu-item">
           <div class="name">Fresa</div>
           <div class="price">$1.00</div>
@@ -237,10 +237,10 @@
         </div>
       </div>
     </div>
-    <h1><img src="\img\combos.png"></h1>
+    <h1><img src="img/combos.png"></h1>
     <div class="menu-container">
       <div class="section">
-        <h2><img src="\img\pa-todos.png"></h2>
+        <h2><img src="img/pa-todos.png"></h2>
         <div class="menu-item">
           <div class="name">- 5 Hot Dog a preferencia</div>
         </div>
@@ -261,7 +261,7 @@
       </div>
 
       <div class="section">
-        <h2><img src="\img\love-zone.png"></h2>
+        <h2><img src="img/love-zone.png"></h2>
         <div class="menu-item">
           <div class="name">- 2 Hot Dog a preferencia</div>
         </div>
@@ -279,10 +279,10 @@
       </div>
 
     </div>
-    <h1><img src="\img\personalizados.png"></h1>
+    <h1><img src="img/personalizados.png"></h1>
     <div class="menu-container">
       <div class="section">
-        <h2><img src="\img\panes.png"></h2>
+        <h2><img src="img/panes.png"></h2>
         <div class="menu-item">
           <div class="name">Pan Integral</div>
         </div>
@@ -303,7 +303,7 @@
         </div>
       </div>
       <div class="section">
-        <h2><img src="\img\adicionales.png"></h2>
+        <h2><img src="img/adicionales.png"></h2>
         <div class="menu-item">
           <div class="name">Extra Chilli</div>
           <div class="price">$0.50</div>
@@ -346,10 +346,10 @@
         </div>
       </div>
     </div>
-    <h1><img src="\img\healthy-dog.png"></h1>
+    <h1><img src="img/healthy-dog.png"></h1>
     <div class="menu-container">
       <div class="section">
-        <h2><img src="\img\hot-free.png"></h2>
+        <h2><img src="img/hot-free.png"></h2>
         <div class="menu-item">
           <div class="name">Salchicha de</div>
         </div>
@@ -361,7 +361,7 @@
         </div>
       </div>
       <div class="section">
-        <h2><img src="\img\panes-healthy.png"></h2>
+        <h2><img src="img/panes-healthy.png"></h2>
         <div class="menu-item">
           <div class="name">Pan Sin Gluten</div>
         </div>
@@ -373,7 +373,7 @@
         </div>
       </div>
       <div class="section">
-        <h2><img src="\img\topping.png"></h2>
+        <h2><img src="img/topping.png"></h2>
         <div class="menu-item">
           <div class="name">Lechuga</div>
         </div>
@@ -400,7 +400,7 @@
     <br>
     <div class="menu-container">
       <div class="section">
-        <h2><img src="\img\batidos-naturales.png"></h2>
+        <h2><img src="img/batidos-naturales.png"></h2>
         <div class="menu-item">
           <div class="name">Sandía</div>
           <div class="name">Grande</div>
