Set background color

--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <style>
       body {
         font-family: Arial, sans-serif;
-        background-color: #f4f4f4;
-        background-image: url("/img/background.png");
+        background-color: #48240C;
         
-        background-color: #cccccc; /* Used if the image is unavailable */
-        height: 500px; /* You must set a specified height */
-        background-position: center; /* Center the image */
+
+        /*background-image: url("/img/background.png");*/
+        /*height: 500px; /* You must set a specified height */
+        /*background-position: center; /* Center the image */
         /*background-repeat: no-repeat; /* Do not repeat the image */
-        background-size: cover; /* Resize the background image to cover the entire container */
+        /*background-size: cover; /* Resize the background image to cover the entire container */
+
         padding: 20px;
         margin: 0;
         box-sizing: border-box;
