Fix free products

--- a/index.html
+++ b/index.html
@@ -134,18 +134,18 @@
         <h2><img src="img/entradas-gratis.png"></h2>
         <div class="menu-item">
           <div class="name">Palitos de pan</div>
-          <div class="price">$2.75</div>
-          <input type="checkbox" value="2.75" onclick="calculateTotal()">
+          <div class="price"></div>
+          <input type="checkbox" value="0.00" onclick="calculateTotal()">
         </div>
         <div class="menu-item">
           <div class="name">Canastillas de ceviches</div>
-          <div class="price">$2.75</div>
-          <input type="checkbox" value="2.75" onclick="calculateTotal()">
+          <div class="price"></div>
+          <input type="checkbox" value="0.00" onclick="calculateTotal()">
         </div>
         <div class="menu-item">
           <div class="name">Mini salchichas con salsa de la casa</div>
-          <div class="price">$2.75</div>
-          <input type="checkbox" value="2.75" onclick="calculateTotal()">
+          <div class="price"></div>
+          <input type="checkbox" value="0.00" onclick="calculateTotal()">
         </div>
       </div>
       <div class="section">
